fixed laptop-gif size making width of page too big

--- a/src/Components/about.css
+++ b/src/Components/about.css
@@ -2,7 +2,7 @@
     padding: 50px;
     display: flex;
     height: 100vh;
-    justify-content: center;
+    justify-content: space-around;
     align-items: flex-start;
     flex-direction: row;
     scroll-snap-align: start;
@@ -64,10 +64,9 @@ p {
 .laptop-image {
     position: relative;
     z-index: 3;
-    height: 45rem;
-    width: 45rem;
-    margin-top: -4rem;
-    margin-right: -150px;
+    height: 40rem;
+    width: 30rem;
+    margin-top: -2rem;
     color: radial-gradient(white 50% rgb(238, 238, 238) 80%);
 }
 
